--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
       </div>
     </div>
     <footer>
-      <p>Copyright</p>
+      <small>Copyright ice_cream_for_life</small>
     </footer>
   </div>
 </body>
