--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -264,8 +264,8 @@ nav {
 
 footer { 
   width: 930px;
-  font: 170% 'News Cycle', arial, sans-serif;
-  height: 30px;
+  font:  arial, sans-serif;
+  height: 15px;
   padding: 5px 0 20px 0;
   text-align: center;
   border-top: 1px solid #ddd;
