--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
       </div>
     </div>
     <footer>
-      <small>Copyright ice_cream_for_life</small>
+      <small style="font-size:13px;">© 2012 a_amalia All Rights Reserved</small>
     </footer>
   </div>
 </body>
